Cherry-pick a2225304ef16. rdar://116056298

The textarea element URL encodes pasteboard data
    https://bugs.webkit.org/show_bug.cgi?id=261936
    rdar://116056298

    Reviewed by Wenson Hsieh.

    In iOS 17 and aligned OS versions, `+[NSURL URLWithString:]` now percent-encodes invalid characters
    to help create a valid URL, where previously it would return `nil`.

    As a result of this new behavior, strings are now made representable as URLs more easily, and so
    their URL representations are added to the pasteboard with percent-encoded invalid characters.

    Fix by using the new `+[NSURL URLWithString:encodingInvalidCharacters:]` method, which restores
    pre-iOS 17 behavior.

    * Source/WTF/wtf/PlatformHave.h:
    * Source/WebCore/platform/ios/PlatformPasteboardIOS.mm:
    (WebCore::addRepresentationsForPlainText):
    * Tools/TestWebKitAPI/Tests/ios/UIPasteboardTests.mm:
    (TestWebKitAPI::TEST):

    Canonical link: https://commits.webkit.org/269178@main

Canonical link: https://commits.webkit.org/267815.403@safari-7617-branch